# signal-cli-rs

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-02-01-signal-mcp-design.md  2026-02-01-signal-mcp-implementation.md
src/: client.rs  main.rs  server.rs  signal.rs  storage.rs
