[package]
name = "signal-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Signal protocol
presage = { path = "vendor/presage/presage" }
presage-store-sqlite = { path = "vendor/presage/presage-store-sqlite" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite storage (bundled-sqlcipher to match presage-store-sqlite)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# QR code for linking
qrcode = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# URL handling
url = "2"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
quickcheck_async = { git = 'https://github.com/nytopop/quickcheck_async', rev = '76b13525ca93e0725e757f841fc6ccab8bae1913' }

[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { path = "vendor/libsignal-service-rs" }
